--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/Project4/index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/iCoder/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/Project4/about.html">About</a>
+                    <a class="nav-link" href="/iCoder/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -44,8 +44,8 @@
                         <a class="dropdown-item" href="#">Support Us</a>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/Project4/contact.html">Contact Us</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/iCoder/contact.html">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
